examples/errors/NotCallable.bkf
module exporting ()

layer basicLayer:
| => {}

layer notCallableExample:
| "a" "b" "c" r => r ["a", {"b", "c"}] -- first error
| *other => (basicLayer other) "a" -- second error
